contrast issues

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
   --darker-green: hsl(141deg 39.64% 23.54%);
   --secondary1: #9bd8f2;
   --secondary2: #34bae4;
-  --secondary3: #1e87b4;
+  --secondary3: #1C7CA6;
   --accent1: #ffe279;
   --accent2: #f0c425;
   --accent3: #d1a700;
@@ -64,8 +64,6 @@ img {
   max-width: 100%;
 }
 
-
-
 h1,
 .h1,
 h2,
@@ -108,12 +106,14 @@ h3,
 
 h4,
 .h4 {
+  font-family: var(--body-font);
   font-size: var(--h4-size);
   font-weight: bold;
 }
 
 h5,
 .h5 {
+  font-family: var(--body-font);
   font-size: var(--h5-size);
   font-weight: bold;
 }
@@ -162,13 +162,16 @@ button, a {
   transition-property: color, background-color;
   transition-duration: 200ms;
 }
-a,
-a:visited {
-  color: var(--accent1);
+a, a:visited {
+  color: var(--secondary3);
 }
-a:hover, a:focus {
-  color: var(--accent3);
+.dark a, .dark a:visited {
+  color: var(--secondary1);
 }
+a:hover, a:focus, .dark a:hover, .dark a:focus {
+  color: var(--secondary2);
+}
+
 
 /*#endregion base*/
 
@@ -514,21 +517,28 @@ nav {
   overflow-x: clip;
 }
 
-.my-work-subsection {padding: 6rem 0;}
+.my-work-subsection {
+padding: 6rem 0;
+}
 
 .my-work-subsection .section-heading {
   position: relative;
   margin-bottom: 5rem;
 }
 .github-link {
-  text-align: center;
-  margin-bottom: 5rem;
-  margin-top: -3rem;
-  display: flex;
-  justify-content: center;
+  display: inline-flex;
   align-items: center;
   gap: 0.5rem;
+  margin-top: 1rem;
 }
+
+#projects .github-link {
+  margin-bottom: 5rem;
+  position: absolute;
+  top: 10px;
+  right: 0;
+}
+
 
 .my-work-list {
   display: flex;
@@ -585,24 +595,21 @@ nav {
   background-color: white;
 }
 
-
-.my-work-subsection:nth-of-type(2) {
+.my-work-subsection.dark {
   background-color: var(--gray700);
   color: white;
 }
-.my-work-subsection:nth-of-type(2) .section-heading {
-}
 
-.my-work-subsection:nth-of-type(2) .my-work-list {
+.my-work-subsection.dark .my-work-list {
   margin-left: auto;
 }
 
-.my-work-subsection:nth-of-type(2) .my-work-list__item:after {
+.my-work-subsection.dark .my-work-list__item:after {
   transform: translateX(50%);
 }
 
 @media all and (min-width: 801px) {
-  .my-work-subsection:nth-of-type(2) .my-work-list__item {
+  .my-work-subsection.dark .my-work-list__item {
     flex-direction: row-reverse;
     margin-left: auto;
   }
@@ -664,7 +671,6 @@ nav {
   padding: 0.5rem 1rem;
   display: inline-block;
   font-size: 1.4rem;
-  color: white;
 }
 /*#endregion my work*/
 
